src/packaged/main/objects/PdfTemplate__c/PdfTemplate__c.object-meta.xml
<CustomObject>
    <description>Stores config information about PDF Templates that are used to render Quotes, Invoices, Orders, etc</description>
    <label>PDF Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>