src/packaged/main/objects/PdfTemplate__c/fields/AddressFormatting__c.field-meta.xml
<CustomField>
    <fullName>AddressFormatting__c</fullName>
    <description>Custom formatting for the recipient address. Allows to inject custom HTML code and placeholder</description>
    <inlineHelpText>Enter the formatting that is used to display the recipient address. You can enter any raw text, placeholders in the format {!FieldName}, i.e. {!BillingStreet}, for merge fields and line breaks.</inlineHelpText>
    <label>Address Formatting</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>