src/packaged/main/objects/PdfTemplate__c/fields/DateFormatting__c.field-meta.xml
<CustomField>
    <fullName>DateFormatting__c</fullName>
    <defaultValue>&quot;dd.MM.yyyy&quot;</defaultValue>
    <description>Formatter pattern that is used to format all date values on the quote.</description>
    <inlineHelpText>Enter the pattern that will be used to format dates. See https://mobilityhouse.atlassian.net/wiki/spaces/PI/pages/1503461403/Configure+Pattern+to+Format+Date+Values+on+PDFs for more details.</inlineHelpText>
    <label>Date Formatting</label>
    <type>Text</type>
    <length>30</length>
</CustomField>