src/packaged/main/objects/PdfTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for this PDF Template. Used as help text to guide users where this template may be used.</description>
    <inlineHelpText>Enter the template&#39;s description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>