src/packaged/main/objects/PdfTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking &quot;Is Active&quot; makes the template available for users when the PDF Template can be selected</description>
    <inlineHelpText>Active to display the template to Users</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>