src/packaged/main/objects/PdfTemplate__c/fields/LetterFormat__c.field-meta.xml
<CustomField>
    <fullName>LetterFormat__c</fullName>
    <description>Letter Format CSS that is used to render the PDF</description>
    <inlineHelpText>Select the letter format for the rendered PDF</inlineHelpText>
    <label>Letter Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIN_5008_Type_A</fullName>
                <default>true</default>
                <label>DIN 5008 (Type A)</label>
            </value>
            <value>
                <fullName>ANSI_Letter</fullName>
                <label>ANSI Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>