src/packaged/main/objects/PdfTemplate__c/fields/TaxDisplayOptions__c.field-meta.xml
<CustomField>
    <fullName>TaxDisplayOptions__c</fullName>
    <description>Different options how tax column (per line item) and tax totals should be displayed</description>
    <inlineHelpText>Select the display options for taxes on this PDF</inlineHelpText>
    <label>Tax Display Options</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show_Column_Show_NetGross_Prices</fullName>
                <default>true</default>
                <label>Show Column, Show Net and Gross Prices</label>
            </value>
            <value>
                <fullName>Show_Column_Show_Net_Prices</fullName>
                <label>Show Column, Show Net Prices Only</label>
            </value>
            <value>
                <fullName>Show_Column_Show_Gross_Prices</fullName>
                <label>Show Column, Show Gross Prices Only</label>
            </value>
            <value>
                <fullName>Hide_Column_Show_NetGross_Prices</fullName>
                <label>Hide Column, Show Net and Gross Prices</label>
            </value>
            <value>
                <fullName>Hide_Column_Show_Net_Prices</fullName>
                <label>Hide Column, Show Net Prices Only</label>
            </value>
            <value>
                <fullName>Hide_Column_Show_Gross_Prices</fullName>
                <label>Hide Column, Show Gross Prices Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>