src/packaged/main/objects/PdfTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LetterFormat__c</columns>
    <columns>DateFormatting__c</columns>
    <columns>TaxDisplayOptions__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>